--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,7 @@ body {
 }
 
 .fondo {
-  background-image: url(/img/fondo.jpg);
+  background-image: url(../img/fondo.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   height: 300px;
